Lightbox duration reduced, z-index of editbuttons fixed

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -735,7 +735,7 @@ div.img-div{
 	font-size: 14px;
 	position: relative;
 	right: -25px;
-	z-index: 9999999999;
+	z-index: 99;
 }
 .edit-button:hover {
 	color: #FF003A;
